@@ -45,6 +45,7 @@ Version 1.3.11:
    * Tips of the day have attributions, a "Previous" button and a fixed size.
    * Savegames now have a prefix indicating the campaign they are from if
      the campaign WML declared an abbrev= tag.
+   * When the game enters linger mode the map shows a visual hint.
 
 Version 1.3.10:
   * Campaigns
