@@ -16,6 +16,8 @@ Version 1.3.11+svn:
    * removed the turn_cmd preference option
    * Savegames now have a prefix indicating the campaign they are from if
      the campaign WML declared an abbrev= tag.
+   * in linger mode a new overlay is used to see the difference between
+     playing and lingering
  * WML engine:
    * New standard unit filter keys:
      - defense: chance to be hit on current terrain by normal weapons
